implementacion query bot
